@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Add mailbox caching to the smartmobile view.
 * [mms] Cache last seen message in smartmobile view.
 * [mms] Viewing a mailbox in smartmobile mode no longer resets the sortpref preference.
 * [mms] Allow all SMTP configuration parameters to be overridden in the backends configuration file (Request #11051).
